Fixed non-aligning titles in main display area

--- a/14-admin-dashboard/style.css
+++ b/14-admin-dashboard/style.css
@@ -301,29 +301,33 @@ button:hover {
 .mainContent{
 
     display: grid;
-    grid-template-columns: 3fr minmax(300px, 1fr);
+    grid-template-columns: 1fr 300px;
+    
     grid-template-rows: 1fr 1fr;
 }
 
 .mainHeader {
     height: auto;
     margin-left: 20px;
-
+    
     font-size: 18px;
-
+    
     display: grid;
-    grid-template-columns: 3fr minmax(300px, 1fr);
-    gap: 30px;
+    grid-template-columns: 1fr 300px;
+}
+
+.announcements_title {
+    padding-left: 30px;
 }
 
 .project {
     grid-column: 1/2;
     grid-row: 1/-1;
-
+    
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(autofill, 200px);
-
+    
     gap: 30px;
 
     margin-left: var(--sidebar-left-pad);
@@ -406,12 +410,6 @@ h3+p {
     margin: 0 30px;
 }
 
-.announcement>h3 {
-
-    /* to override grid gap */
-    margin-bottom: -40px;
-    align-self: center;
-}
 
 .announcementContents {
     background-color: #fff;
